rmsbase BL-MemoirTemplate

--- a/book11.tex
+++ b/book11.tex
@@ -21,7 +21,7 @@ Abcdef ghjijk lmnop qrstu vwxyz.
 Abcdef ghjijk lmnop qrstu vwxyz.
 Abcdef ghjijk lmnop qrstu vwxyz.
 \end{verbatim}
-\caption[AAAA BBBB CCCC DDDD.]{Aaaa bbbb cccc dddd eeee ffff.}\label{document}
+\caption[FIG LIST AAAAA]{\gaudeamus}\label{document}
 \end{figure}
 \subsection{SubSection}
 \lipsum[1]
@@ -31,7 +31,7 @@ Abcdef ghjijk lmnop qrstu vwxyz.
 \includegraphics[scale=0.25]{book.jpg}
 \vspace*{7pt}
 \end{center}
-\caption[AAAA BBBB CCCC DDDD.]{Aaaa bbbb cccc dddd eeee ffff.}\label{fig:figure}
+\caption[FIG LIST BBBBB]{\gaudeamus}\label{fig:figure}
 \end{figure}
 \lipsum[1]
 See also figure~\ref{fig:figure}.
