rmsbase BL-MemoirTemplate

--- a/book00.tex
+++ b/book00.tex
@@ -26,9 +26,10 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{\begin{minipage}{\textwidth}
 \flushright
 {\bfseries by 
-\authora\\[1.5ex]
+\authora,\\[1.5ex]
+\authorb,\\[1.5ex]
 and 
-\authorb\\[3ex]} 
+\authorc\\[3ex]} 
 Rev. \revision
 \end{minipage}}
 
@@ -41,7 +42,8 @@ Rev. \revision
 \sloppy
 \frontmatter
 \begin{small} 
-  \noindent Copyright \copyright 2018 Cicak bin Kadal and Dul Latip.  All wrongs reversed.
+  \noindent Copyright \copyright 2018 \authora, \authorb, and \authorc.
+  All rights reversed, all wrongs corrected.
 
   \lipsum[1]
 \end{small}
@@ -55,21 +57,33 @@ The following individuals helped with corrections, suggestions and
 material to improve this book:
 
 {\flushleft\small
-Cicak bin Kadal,
-Dul Latip,
-Gaelle T. Morin,
-Cicak bin Kadal,
-Dul Latip,
-Gaelle T. Morin,
-Cicak bin Kadal,
-Dul Latip,
-Gaelle T. Morin,
-Cicak bin Kadal,
-Dul Latip,
-Gaelle T. Morin,
-Cicak bin Kadal,
-Dul Latip,
-Gaelle T. Morin.
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc,
+\authora,
+\authorb,
+\authorc.
 }
 
 \vspace*{\stretch{1}}
@@ -83,11 +97,16 @@ Gaelle T. Morin.
 \begin{verse} 
 \begin{small} 
 \noindent%
-\authora{ }\url{mailto:cbk@cbk.com} \\
+\authora{ }(\url{mailto:cbk@cbk.com}), \\
 \noindent%
-and \authorb{ }\url{https://cbk.vlsm.org/} \\
+\authorb{ }(\url{https://cbk.vlsm.org/}), \\
 \noindent%
-1600 Pennsylvania Ave NW, Washington, DC 20500, USA First.\\
+and 
+\authorc. \\
+\noindent%
+1600 Pennsylvania Ave NW, Washington, DC 20500,\\
+\noindent%
+America First.\\
 \end{small} 
 \end{verse} 
 \clearpage
