--- a/book11.tex
+++ b/book11.tex
@@ -1,4 +1,4 @@
-% REV02 Thu May 24 18:40:57 WIB 2018
+% REV03 Fri May 25 10:23:00 WIB 2018
 % START Tue May 22 19:45:45 WIB 2018
 
 % (c) 2018 Rahmat M. Samik-Ibrahim 
@@ -6,7 +6,7 @@
 % This is a free document. 
 
 \chapter{One One One}
-\LaTeX{} was originally written by \index{Lamport, Leslie}Leslie Lamport~\cite{manual}.
+\LaTeX{} was originally written by \index{Lamport, Leslie}Leslie Lamport~\cite{lamport94}.
 \gaudeamus
 \section{Section}
 \lipsum[1]
@@ -27,9 +27,8 @@ Abcdef ghjijk lmnop qrstu vwxyz.
 \lipsum[1]
 \begin{figure}[h]
 \begin{center}
-\vspace*{9pt}
-\includegraphics[scale=0.25]{book.jpg}
-\vspace*{7pt}
+\vspace*{15pt}
+\includegraphics[scale=0.51]{book.jpg}
 \end{center}
 \caption[FIG LIST BBBBB]{\gaudeamus}\label{fig:figure}
 \end{figure}
@@ -47,4 +46,6 @@ See also figure~\ref{fig:figure}.
 \end{table}
 \lipsum[1]
 See also table~\ref{tab:Table}.
+This is a long URL: \url{http://texwelt.de/wissen/fragen/5303/%
+wiekannichmittikzeinentextamseitenrandvonuntennachobenschreiben}.
 
