--- a/book22.tex
+++ b/book22.tex
@@ -6,9 +6,14 @@
 % This is a free document. 
 
 \begin{thebibliography}{99}
-\bibitem{manual} Leslie Lamport.  \newblock \emph{{\LaTeX:} A Document
-    Preparation System}.  \newblock Addison-Wesley, Reading,
-  Massachusetts, second edition, 1994, ISBN~0-201-52983-1.
+\bibitem{lamport94} Leslie Lamport.
+   \newblock \emph{{\LaTeX:} A Document Preparation System}.
+   \newblock Addison-Wesley, Reading, Massachusetts, second edition, 1994, ISBN~0-201-52983-1.
+
+\bibitem{oetiker} Tobias Oetiker.
+   \newblock The Not So Short Introduction to \LaTeX2e.
+   \newblock Available as \url{https://tobi.oetiker.ch/lshort/lshort.pdf} (Accessed: 2018-05-25).
+
 \end{thebibliography}
 \backmatter
 
