--- a/vaulsbook.sty
+++ b/vaulsbook.sty
@@ -1,5 +1,5 @@
-\newcommand{\revision}{02--24-May-2018}
-% REV02 Thu May 24 18:33:02 WIB 2018
+\newcommand{\revision}{03--25-May-2018}
+% REV03 Fri May 25 10:15:58 WIB 2018
 % START Tue May 22 19:45:45 WIB 2018
 
 % (c) 2018 Rahmat M. Samik-Ibrahim 
@@ -9,8 +9,10 @@
 \documentclass[a4paper,12pt,twoside,openright]{memoir}
 \newcommand{\authora}{Cicak Bin Kadal}
 \newcommand{\authorb}{Dul Latip}
+\newcommand{\authorc}{Dr. Pepper's Lonely HCB}
 \newcommand{\maintitle}{A Simple \LaTeX\ Book Template}
 \newcommand{\subtitle}{with the Memoir Class}
+\usepackage{etoolbox}         % break break?
 \usepackage{graphicx}         % jpg etc pictures.
 \usepackage{hyperref}         % URLs 
 \usepackage{lipsum}           % Random text
@@ -26,3 +28,8 @@
       urlcolor=gray,
 }
 \newcommand{\gaudeamus}{Gaudeamus igitur. Iuvenes dum sumus. Post iucundam iuventutem. Post molesting senatoras. Noha humus.}
+\PassOptionsToPackage{hyphens}{url}
+\appto\UrlBreaks{\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j
+\do\k\do\l\do\m\do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v\do\w
+\do\x\do\y\do\z}
+
