rmsbase BL-MemoirTemplate

--- a/book11.tex
+++ b/book11.tex
@@ -1,4 +1,4 @@
-% REV03 Fri May 25 10:23:00 WIB 2018
+% REV04 Mon Nov  5 18:29:33 WIB 2018
 % START Tue May 22 19:45:45 WIB 2018
 
 % (c) 2018 Rahmat M. Samik-Ibrahim 
@@ -6,7 +6,7 @@
 % This is a free document. 
 
 \chapter{One One One}
-\LaTeX{} was originally written by \index{Lamport, Leslie}Leslie Lamport~\cite{lamport94}.
+\LaTeX{} was originally written by \index{Lamport, Leslie}Leslie Lamport~\citep{lamport94}.
 \gaudeamus
 \section{Section}
 \lipsum[1]
@@ -15,11 +15,16 @@
 See also figure~\ref{document}.
 \begin{figure}[h]
 \begin{verbatim}
-Abcdef ghjijk lmnop qrstu vwxyz.
-Abcdef ghjijk lmnop qrstu vwxyz.
-Abcdef ghjijk lmnop qrstu vwxyz.
-Abcdef ghjijk lmnop qrstu vwxyz.
-Abcdef ghjijk lmnop qrstu vwxyz.
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+Ut purus elit, vestibulum ut, placerat ac, adipiscing vitae.
+Curabitur dictum gravida mauris.
+Nam arcu libero, nonummy eget, consectetuer, vulputate magna.
+
+Donec vehicula augue eu neque.
+Pellentesque habitant morbi tristique senectus et netu.
+Mauris ut leo.  Cras viverra metus rhoncus sem.
+Nulla et lectus vestibulum urna fringilla ultrices.
+Phasellus eu tellus sit amet tortor gravida placerat.
 \end{verbatim}
 \caption[FIG LIST AAAAA]{\gaudeamus}\label{document}
 \end{figure}
@@ -48,4 +53,5 @@ See also figure~\ref{fig:figure}.
 See also table~\ref{tab:Table}.
 This is a long URL: \url{http://texwelt.de/wissen/fragen/5303/%
 wiekannichmittikzeinentextamseitenrandvonuntennachobenschreiben}.
+\lipsum[1]
 
