--- a/book22.tex
+++ b/book22.tex
@@ -1,19 +1,22 @@
-% REV02 Thu May 24 20:08:46 WIB 2018
+% REV04 Mon Nov  5 18:22:04 WIB 2018
 % START Tue May 22 19:45:45 WIB 2018
 
 % (c) 2018 Rahmat M. Samik-Ibrahim 
 % All Rights Reversed --- All Wrongs Ignored.
 % This is a free document. 
 
-\begin{thebibliography}{99}
-\bibitem{lamport94} Leslie Lamport.
-   \newblock \emph{{\LaTeX:} A Document Preparation System}.
-   \newblock Addison-Wesley, Reading, Massachusetts, second edition, 1994, ISBN~0-201-52983-1.
-
-\bibitem{oetiker} Tobias Oetiker.
-   \newblock The Not So Short Introduction to \LaTeX2e.
-   \newblock Available as \url{https://tobi.oetiker.ch/lshort/lshort.pdf} (Accessed: 2018-05-25).
-
-\end{thebibliography}
+\bibliographystyle{plainnat}
+\bibliography{rmsbib-list}
 \backmatter
 
+%% \begin{thebibliography}{99}
+%% \bibitem{lamport94} Leslie Lamport.
+%%    \newblock \emph{{\LaTeX:} A Document Preparation System}.
+%%    \newblock Addison-Wesley, Reading, Massachusetts, second edition, 1994, ISBN~0-201-52983-1.
+%% 
+%% \bibitem{oetiker} Tobias Oetiker.
+%%    \newblock The Not So Short Introduction to \LaTeX2e.
+%%    \newblock Available as \url{https://tobi.oetiker.ch/lshort/lshort.pdf} (Accessed: 2018-05-25).
+%% 
+%% \end{thebibliography}
+%% 
